[package]
name = "progress-logger"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"
license = "MIT"
description = "Simple tool to report the progress of a computation"
homepage = "https://github.com/Cecca/progress-logger-rs"
repository = "https://github.com/Cecca/progress-logger-rs"
readme = "README.md"


[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.7"
